[package]
name = "aniplot"
version = "0.1.0"
authors = ["Mattis Marjak <mattis.marjak@defendec.com>"]
build = "build.rs"

[dependencies]
glium                = "0.16"
imgui                = { path = "imgui-rs" }
imgui-glium-renderer = { path = "imgui-rs/imgui-glium-renderer" }

[build-dependencies]
gcc = "*"
bindgen = "*"
